--- a/stylesheet.css
+++ b/stylesheet.css
@@ -35,7 +35,7 @@ body {
     overflow-y: scroll;
     overflow-x: hidden;
     padding: 5px 15px 20px 15px;
-    background-image: url(background.jpg);
+    /*background-image: url(background.jpg);*/
     background-size: cover;
     box-sizing: border-box;
     position: relative;
