--- a/stylesheet.css
+++ b/stylesheet.css
@@ -1,4 +1,3 @@
-
 #container {
     width: 95%;
     max-width: 380px;
@@ -19,6 +18,8 @@ body {
     background-color: green;
     box-shadow: 0px 3px 10px 0px lightgrey;
     position: relative;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     z-index: 2;
     overflow: hidden;
@@ -96,6 +97,8 @@ p {
 }
 
 .datecontainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     margin: 10px 0 10px 0;
     position: relative;
@@ -123,8 +126,12 @@ p {
 }
 
 #toolbox {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-pack: distribute;
     justify-content: space-around;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
     background-color: green;
     padding: 10px;
@@ -139,8 +146,14 @@ p {
     max-width: 675px;
     border-radius: 7px;
     background-color: #f3f3f3;
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+    -ms-flex-direction: column;
     flex-direction: column;
+    -ms-flex-line-pack: distribute;
     align-content: space-around;
 }
 
@@ -152,12 +165,18 @@ p {
     left: 0;
     background-color: rgba(30, 30, 30, .5);
     z-index: 5;
+    -webkit-transition: display 0.2s;
     transition: display 0.2s;
 }
 
 #fileform {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
+    -webkit-box-pack: center;
+    -ms-flex-pack: center;
     justify-content: center;
 }
 
@@ -176,6 +195,8 @@ p {
 }
 
 #uploadboxcontainer {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
     height: 100%;
     width: 100%;
@@ -203,6 +224,9 @@ p {
 }
 
 #buttonArea {
+    display: -webkit-box;
+    display: -ms-flexbox;
     display: flex;
+    -ms-flex-pack: distribute;
     justify-content: space-around;
 }
